# QuickChunk

./: CMakeLists.txt  README.md  client.c  client.h  quickchunk.c  quickchunk.h  server.c  server.h
